--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -5,6 +5,7 @@
 <div class="container">
   <mat-card class="post-card" *ngFor="let post of posts">
     <mat-card-header>
+      <p>{{post.user}}</p>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>{{post.username}}</mat-card-title>
       <mat-card-subtitle></mat-card-subtitle>
