--- a/photosharingapp/src/app/view/view.component.html
+++ b/photosharingapp/src/app/view/view.component.html
@@ -1,6 +1,9 @@
 <app-navbar></app-navbar>
 <h2>Hello {{loggedInUser}}</h2>
-<h1 class="feed">FEED</h1>
+<nav>
+  <button mat-raised-button><a routerLink="/view">FEED</a></button>
+  <button mat-raised-button><a routerLink="/my-posts">MY POSTS</a></button>
+</nav>
 
 <div class="container">
   <mat-card class="post-card" *ngFor="let post of posts">
@@ -19,10 +22,6 @@
     <mat-card-actions>
       <span><app-like></app-like></span>
       <span><app-comment></app-comment> </span>
-
-
-
-
     </mat-card-actions>
   </mat-card>
 </div>
