--- a/photosharingapp/src/app/comment/comment.component.css
+++ b/photosharingapp/src/app/comment/comment.component.css
@@ -9,7 +9,7 @@ button {
   
   .comment-icon {
     font-size: 1.5rem;
-    margin-right: 0.5rem;
+    /* margin-right: 0.5rem; */
   }
   
   .comment-input {
