--- a/photosharingapp/src/app/login/login.component.html
+++ b/photosharingapp/src/app/login/login.component.html
@@ -17,12 +17,12 @@
 
         <mat-form-field id="username" appearance="outline">
           <mat-label for="username">Email</mat-label>
-          <input matInput formControlName="email" type="email" required="true" />
+          <input matInput formControlName="email" required="true" />
         </mat-form-field>
 
         <mat-form-field id="password" appearance="outline">
           <mat-label for="password">Password</mat-label>
-          <input matInput formControlName="password" type = "password" required="true" />
+          <input matInput formControlName="password" required="true" />
         </mat-form-field>
 
         <p>{{invalidPassword}}</p>
