--- a/photosharingapp/src/app/view/view.component.css
+++ b/photosharingapp/src/app/view/view.component.css
@@ -1,4 +1,4 @@
-.post-card {
+n.post-card {
     max-width: 400px;
     border: 1px solid #fff;
     margin: 10px auto;
@@ -46,31 +46,10 @@
     background-color: rgb(122, 108, 247);
   }
 
-<<<<<<< HEAD
-  .example-spacer {
-    flex: 1 1 auto;
-  }
-  
-  nav a {
-    text-decoration: none;
-    font-size: 1.5rem;
-  }
-  
-  .active {
-    color: blue;
-  }
-  
-  nav {
-    width: 30em;
-    display: flex;
-    justify-content: space-around;
-    margin: 2em auto;
-=======
   h2{
     position: relative;
     left: 70px;
     font-style: italic;
->>>>>>> 94b09c3e654fa2beedcb14fd0cf81f54f163d86d
   }
 
   
