--- a/photosharingapp/src/app/view/view.component.css
+++ b/photosharingapp/src/app/view/view.component.css
@@ -71,3 +71,19 @@
     justify-content: space-around;
     margin: 2em auto;
   }
+
+  button {
+    border: none;
+    background: none;
+    cursor: pointer;
+  }
+  
+  .liked {
+    color: red;
+  }
+  
+  .heart-icon {
+    font-size: 1.5rem;
+    position: relative;
+    left: 5px;
+  }
