--- a/photosharingapp/src/app/view/view.component.css
+++ b/photosharingapp/src/app/view/view.component.css
@@ -71,3 +71,8 @@
     justify-content: space-around;
     margin: 2em auto;
   }
+
+  .name{
+    /* font-weight: bold; */
+    font-size: large;
+  }
